--- a/duck.html
+++ b/duck.html
@@ -22,6 +22,7 @@
 			display: inline-block;
 			width: 2rem;
                         font-weight: bolder;
+			font-family: Arial Black;
 		}
 		.text-large {
 			font-size: 2rem;
