--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				font-size: inherit;
 				font-weight: inherit;
 				color: inherit;
-				font-family: "Arial Black";
+				font-family: Arial Black;
 				line-height: inherit;
 				display: inherit;
 				align-items: inherit;
