--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				font-size: 35px;
 				font-weight: bold;
 				color: #1dc278;
-				font-family: Arial Black, sans-serif;
+				font-family: Arial, sans-serif;
 				line-height: 48px;
 				display: flex;
 				align-items: center;
@@ -177,7 +177,8 @@
 			.toolbar-title h1 {
 				font-size: inherit;
 				color: inherit;
-				font-family: "Arial Black", sans-serif;
+				font-weight: inherit;
+				font-family: inherit;
 				line-height: inherit;
 				display: inherit;
 				align-items: inherit;
