--- a/duck.html
+++ b/duck.html
@@ -21,7 +21,8 @@
 		.dash {
 			display: inline-block;
 			width: 2rem;
-			font-family: Arial Black;
+			font-family: Arial;
+			font-weight: bold;
 		}
 		.text-large {
 			font-size: 2rem;
@@ -33,10 +34,10 @@
 <body>
 	<div class="container">
 		<p class="text-large">Out for a duck!</p>
-		<span class="dash" id="dash1">—</span>
-		<span class="dash" id="dash2">—</span>
-		<span class="dash" id="dash3">—</span>
-		<span class="dash" id="dash4">—</span>
+		<span class="dash" id="dash1">‐</span>
+		<span class="dash" id="dash2">‐</span>
+		<span class="dash" id="dash3">‐</span>
+		<span class="dash" id="dash4">‐</span>
 		<p>You didnt get today's Crickdle. The answer is <b>SANGAKKARA</b>.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 		<p id="countdown"></p>
