--- a/bowled.html
+++ b/bowled.html
@@ -21,6 +21,7 @@
 		.dash {
 			display: inline-block;
 			width: 2rem;
+			height: 1rem;
 			font-family: Arial;
 			font-weight: bold;
 		}
@@ -34,10 +35,10 @@
 <body>
 	<div class="container">
 		<p class="text-large">Bowled 'em!</p>
-		<span class="dash" id="dash1">‐</span>
-		<span class="dash" id="dash2">‐</span>
-		<span class="dash" id="dash3">‐</span>
-		<span class="dash" id="dash4">‐</span>
+		<span class="dash" id="dash1">—</span>
+		<span class="dash" id="dash2">—</span>
+		<span class="dash" id="dash3">—</span>
+		<span class="dash" id="dash4">—</span>
 		<p>You got today's Crickdle.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 		<p id="countdown"></p>
