--- a/duck.html
+++ b/duck.html
@@ -26,7 +26,7 @@
 			font-weight: bold;
 		}
 		.text-large {
-			font-size: 2rem;
+			font-size: 1.5rem;
 			font-weight: bold;
                         color: #f03a17;
 		}
@@ -227,6 +227,10 @@
 
 .twitter-button:hover {
   opacity: 0.8;
+}
+		
+		.twitter-button .icon {
+  display: none;
 }
 			
 			.toolbar-help img,
