--- a/bowled.html
+++ b/bowled.html
@@ -281,7 +281,7 @@
 		<span class="dash" id="dash4">—</span>
 		<p>You got today's Crickdle.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
-		 <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">TWITTER</a>
+		 <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 		<p id="countdown"></p>
 	</div>
 
