--- a/duck.html
+++ b/duck.html
@@ -272,7 +272,6 @@
 					</div>
 					 <div class="share-container">
         <button class="share-button">SHARE</button>
-        <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">TWITTER</a>
       </div>
 				</div>
 			</div>
@@ -286,6 +285,7 @@
 		<span class="dash" id="dash4">—</span>
 		<p>You didnt get today's Crickdle. The answer is <b>SANGAKKARA</b>.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
+		  <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 		<p id="countdown"></p>
 	</div>
 
