--- a/duck.html
+++ b/duck.html
@@ -26,7 +26,7 @@
 			font-weight: bold;
 		}
 		.text-large {
-			font-size: 1.5rem;
+			font-size: 1.8rem;
 			font-weight: bold;
                         color: #f03a17;
 		}
@@ -223,6 +223,8 @@
   font-family: Arial, sans-serif;
   text-decoration: none;
   height: 40px;
+	  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .twitter-button:hover {
