--- a/duck.html
+++ b/duck.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
@@ -284,7 +284,6 @@
 			</div>
 		</header>
 <body>
-	<div class="container">
 		<p class="text-large">Out for a duck!</p>
 		<span class="dash" id="dash1">—</span>
 		<span class="dash" id="dash2">—</span>
@@ -297,7 +296,6 @@
 		<br>
 		<br>
 		<p id="countdown"></p>
-	</div>
 
 	<script>
 		const urlParams = new URLSearchParams(window.location.search);
