--- a/duck.html
+++ b/duck.html
@@ -29,11 +29,10 @@
 			font-size: 1.1rem;
 		}
 		.container {
-			text-align: center;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+		  position: relative;
+  height: 100%;
+  width: 100%;
+  text-align: center;
 		}
 		.dash {
 			display: inline-block;
@@ -284,6 +283,7 @@
 			</div>
 		</header>
 <body>
+		<div class="container">
 		<p class="text-large">Out for a duck!</p>
 		<span class="dash" id="dash1">—</span>
 		<span class="dash" id="dash2">—</span>
@@ -296,6 +296,7 @@
 		<br>
 		<br>
 		<p id="countdown"></p>
+			</div>
 
 	<script>
 		const urlParams = new URLSearchParams(window.location.search);
