--- a/bowled.html
+++ b/bowled.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
@@ -12,11 +12,10 @@
 			font-size: 1.1rem;
 		}
 		.container {
-			text-align: center;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			  position: relative;
+  height: 100%;
+  width: 100%;
+  text-align: center;
 		}
 		.dash {
 			display: inline-block;
