--- a/bowled.html
+++ b/bowled.html
@@ -274,7 +274,7 @@
 		 <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 		<br>
 		<br>
-		<p Next Crickdle in id="countdown"></p>
+		<p>Next Crickdle in <span id="countdown"></span></p>
 	</div>
 
 	<script>
