--- a/duck.html
+++ b/duck.html
@@ -295,7 +295,7 @@
 		  <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 		<br>
 		<br>
-		<p id="countdown"></p>
+		<p>Next Crickdle in <span id="countdown"></span></p>
 			</div>
 
 	<script>
@@ -331,7 +331,7 @@
 				const hours = Math.floor(remaining / (1000 * 60 * 60));
 				const minutes = Math.floor((remaining / (1000 * 60)) % 60);
 				const seconds = Math.floor((remaining / 1000) % 60);
-				countdownElem.textContent = `Next Crickdle in ${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+				countdownElem.textContent = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
 			}
 		}, 1000);
 		
