--- a/bowled.html
+++ b/bowled.html
@@ -183,6 +183,14 @@
 				line-height: 1.5;
 				font-family: Arial, sans-serif;
 			}
+		
+		.share-container {
+  margin-top: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .share-button {
   background-color: #1dc278;
@@ -257,7 +265,9 @@
 					<div class="popup2-content">
 						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
 					</div>
+					 <div class="share-container">
         <button class="share-button">SHARE</button>
+						 </div>
 				</div>
 			</div>
 		</header>
