--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				font-size: 35px;
 				font-weight: bold;
 				color: #1dc278;
-				font-family: Italico, sans-serif;
+				font-family: Gill Sans, sans-serif;
 				line-height: 48px;
 				display: flex;
 				align-items: center;
@@ -364,7 +364,7 @@
 					<button class="toolbar-info" aria-label="About">
 						<img src="Info.png" alt="Information about Crickdle game">
 					</button>
-					<h1 class="toolbar-title">CRICKDLE</h1>
+					<h1 class="toolbar-title">cricdle</h1>
 					<button class="toolbar-help" aria-label="How to play">
 						<img src="Help.png" alt="How to play Crickdle game">
 					</button>
