--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				font-size: 35px;
 				font-weight: bold;
 				color: #1dc278;
-				font-family: Gill Sans, sans-serif;
+				font-family: Arial, sans-serif;
 				line-height: 48px;
 				display: flex;
 				align-items: center;
