--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 					<button class="toolbar-info" aria-label="About">
 						<img src="Info.png" alt="Information about Crickdle game">
 					</button>
-					<h1 class="toolbar-title">crickdle</h1>
+					<h1 class="toolbar-title">CRICKdle</h1>
 					<button class="toolbar-help" aria-label="How to play">
 						<img src="Help.png" alt="How to play Crickdle game">
 					</button>
