--- a/bowled.html
+++ b/bowled.html
@@ -283,10 +283,10 @@
 <body>
 	<div class="container">
 		<p class="text-large">Bowled 'em!</p>
-		<span class="dash" id="dash1">—</span>
-		<span class="dash" id="dash2">—</span>
-		<span class="dash" id="dash3">—</span>
-		<span class="dash" id="dash4">—</span>
+		<span class="dash" id="dash1">●</span>
+		<span class="dash" id="dash2">●</span>
+		<span class="dash" id="dash3">●</span>
+		<span class="dash" id="dash4">●</span>
 		<p>You got today's Crickdle.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 		<br>
