--- a/bowled.html
+++ b/bowled.html
@@ -32,6 +32,7 @@
 			height: 2.5rem;
 			font-family: Arial;
 			font-weight: bold;
+			font-size: 1.5rem;
 		}
 		.text-large {
 			font-size: 1.5rem;
