--- a/bowled.html
+++ b/bowled.html
@@ -29,6 +29,7 @@
 		.dash {
 			display: inline-block;
 			width: 2rem;
+			height: 2rem;
 			font-family: Arial;
 			font-weight: bold;
 			font-size: 3rem;
