--- a/bowled.html
+++ b/bowled.html
@@ -28,11 +28,11 @@
 		}
 		.dash {
 			display: inline-block;
-			width: 2rem;
-			height: 2rem;
+			width: 2rem
 			font-family: Arial;
 			font-weight: bold;
 			font-size: 3rem;
+			height: 1rem
 		}
 		.text-large {
 			font-size: 1.5rem;
