--- a/bowled.html
+++ b/bowled.html
@@ -32,7 +32,8 @@
 			font-family: Arial;
 			font-weight: bold;
 			font-size: 3rem;
-			height: 1rem
+			margin-top: 2rem;
+			margin-bottom: 2rem;
 		}
 		.text-large {
 			font-size: 1.5rem;
