--- a/duck.html
+++ b/duck.html
@@ -44,11 +44,13 @@
   text-align: center;
 		}
 		.dash {
-			display: inline-block;
-			width: 3rem;
-			height: 2.5rem;
+						display: inline-block;
+			width: 2rem
 			font-family: Arial;
 			font-weight: bold;
+			font-size: 3rem;
+			margin-top: 0rem;
+			margin-bottom: 0.5rem;
 		}
 		.text-large {
 			font-size: 1.5rem;
@@ -304,10 +306,10 @@
 <body>
 		<div class="container">
 		<p class="text-large">Out for a duck!</p>
-		<span class="dash" id="dash1">—</span>
-		<span class="dash" id="dash2">—</span>
-		<span class="dash" id="dash3">—</span>
-		<span class="dash" id="dash4">—</span>
+		<span class="dash" id="dash1">●</span>
+		<span class="dash" id="dash2">●</span>
+		<span class="dash" id="dash3">●</span>
+		<span class="dash" id="dash4">●</span>
 		<p>You didnt get today's Crickdle. The answer is <b>SANGAKKARA</b>.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 		<br>
