--- a/bowled.html
+++ b/bowled.html
@@ -14,7 +14,24 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
+	 <meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!">
+  <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
+  <meta name="author" content="Ayush Sanghavi">
 	<style>
+		html {
+				box-sizing: border-box;
+				font-size: 16px;
+			}
+
+			*, *:before, *:after {
+				box-sizing: inherit;
+			}
+
+			@media only screen and (min-width: 768px) {
+				html {
+					font-size: 18px;
+				}
+			}
 		body {
 			background-color: white;
 			font-family: Arial;
