--- a/bowled.html
+++ b/bowled.html
@@ -312,7 +312,7 @@
 		 <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 		<br>
 		<br>
-		<p>Next Crickdle in <span id="countdown"></span></p>
+		<b>Next Crickdle in <span id="countdown"></span></b>
 	</div>
 
 	<script>
