--- a/duck.html
+++ b/duck.html
@@ -316,7 +316,7 @@
 		  <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 		<br>
 		<br>
-		<b>Next Crickdle in <span id="countdown"></span></b>
+		<p><b>Next Crickdle in <span id="countdown"></span></b></p>
 			</div>
 
 	<script>
