--- a/bowled.html
+++ b/bowled.html
@@ -280,7 +280,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
+						<p><b>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</b></p>
 					</div>
 				</div>
 			</div>
@@ -291,7 +291,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
+						<p><b>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</b></p>
 					</div>
 					 <div class="share-container">
         <button class="share-button">SHARE</button>
@@ -306,8 +306,8 @@
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
-		<p>You got today's Crickdle.</p>
-		<p>Come back tomorrow to guess another cricketer.</p>
+		<p><b>You got today's Crickdle.</b></p>
+		<p><b>Come back tomorrow to guess another cricketer.</b></p>
 		<br>
 		 <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 		<br>
