--- a/index.html
+++ b/index.html
@@ -372,22 +372,22 @@
 			<div class="popup-background">
 				<div class="popup">
 					<div class="popup-header">
-						<h2>How to play</h2>
+						<h2>HOW TO PLAY</h2>
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
+						<p><b>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</b></p>
 					</div>
 				</div>
 			</div>
 			<div class="popup2-background">
 				<div class="popup2">
 					<div class="popup2-header">
-						<h2>About</h2>
+						<h2>ABOUT</h2>
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
+						<p><b>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</b></p>
 					</div>
 					 <div class="share-container">
         <button class="share-button">SHARE</button>
@@ -397,9 +397,9 @@
 			</div>
 		</header>
 		<div id="match-details">
-			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
-			<p><span id="date"></span></p>
-			<p><span id="score"></span></p>
+			<p><b><span id="nation1"></span> vs <span id="nation2"></span></b></p>
+			<p><b><span id="date"></span></b></p>
+			<p><b><span id="score"></span></b></p>
 		</div>
 		<div id="guess-section">
 			<h2>Which <span id="crickdlequestion"></span></h2>
