--- a/bowled.html
+++ b/bowled.html
@@ -276,7 +276,7 @@
 			<div class="popup-background">
 				<div class="popup">
 					<div class="popup-header">
-						<h2>How to play</h2>
+						<h2>HOW TO PLAY</h2>
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
@@ -287,7 +287,7 @@
 			<div class="popup2-background">
 				<div class="popup2">
 					<div class="popup2-header">
-						<h2>About</h2>
+						<h2>ABOUT</h2>
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
