--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
 						const hintElement = document.createElement("div");
 						hintElement.style.color = "black";
 						hintElement.style.fontSize = "1.1rem";
+            hintElement.style.fontWeight = "bold";
 						hintElement.style.marginTop = "1rem";
 						hintElement.innerHTML = "Stumped? Click here for a hint.";
 						guessInputs[index + 1].parentNode.insertBefore(hintElement, guessInputs[index + 1].nextSibling);
