--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 			</div>
       <div class="share-container">
         <button class="share-button">SHARE</button>
-        <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">TWITTER</a>
+        <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
       </div>
 		</div>
 		<script>
