--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@
 		<script>
 			const gameDetails = {
 				nation1: "Sri Lanka",
-				nation2: "India",
-				date: "Jul 26-30, 2010",
-				score: "Sri Lanka 642/4d & 129/3d, India 707; Match drawn",
-				crickdlequestion: "Sri Lanka player scored 219 & 42* in this match?"
+				nation2: "Pakistan",
+				date: "Jun 14-17, 2000",
+				score: "Sri Lanka 273 & 123, Pakistan (T: 131) 266 & 131/5; Pakistan won by 5 wickets",
+				crickdlequestion: "Pakistan player scored 78 & 20* and took 1/55 & 5/45 in this match?"
 			};
 
-			const correctPlayer = ["SANGAKKARA"];
+			const correctPlayer = ["AKRAM"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
