--- a/duck.html
+++ b/duck.html
@@ -307,7 +307,7 @@
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
-		<p><b>You didnt get today's Crickdle. The answer is SANGAKKARA.</b></p>
+		<p><b>You didnt get today's Crickdle. The answer is AKRAM.</b></p>
 		<p><b>Come back tomorrow to guess another cricketer.</b></p>
 				 <div class="share-container">
         <button class="share-button">SHARE</button>
