--- a/duck.html
+++ b/duck.html
@@ -40,8 +40,9 @@
 		.container {
 		  position: relative;
   height: 100%;
-  width: 100%;
   text-align: center;
+		width: 90%;
+				max-width: 600px;
 		}
 		.dash {
 						display: inline-block;
