--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				font-size: 1.2rem;
 				text-align: center;
 				border: 2px solid #ccc;
-				border-radius: 0.5rem;
+				border-radius: 4px;
 				width: 60%;
 				max-width: 200px;
 				transition: all 0.2s ease-in-out;
@@ -136,7 +136,7 @@
 				padding: 0.5rem 1rem;
 				font-size: 1.2rem;
 				border: none;
-				border-radius: 0.5rem;
+				border-radius: 4px;
 				background-color: #1dc278;
 				color: #fff;
 				cursor: pointer;
