--- a/duck.html
+++ b/duck.html
@@ -38,11 +38,15 @@
 			font-size: 1.1rem;
 		}
 		.container {
-		  position: relative;
   height: 100%;
   text-align: center;
 		width: 90%;
 				max-width: 600px;
+				margin: 0 auto;
+				padding: 1.5rem;
+				border-radius: 0.5rem;
+				background-color: #f5f5f5;
+				box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 		}
 		.dash {
 						display: inline-block;
