--- a/bowled.html
+++ b/bowled.html
@@ -12,6 +12,7 @@
 </script>
 	<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
+			<link rel="apple-touch-icon" sizes="60x60" href="favicon.ico.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
 	 <meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!">
