--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@
 			</div>
 		</header>
 		<div id="match-details">
-			<p><b><span id="nation1"></span> vs <span id="nation2"></span></b></p>
-			<p><b><span id="date"></span></b></p>
-			<p><b><span id="score"></span></b></p>
+			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
+			<p><span id="date"></span></p>
+			<p><span id="score"></span></p>
 		</div>
 		<div id="guess-section">
 			<h2>Which <span id="crickdlequestion"></span></h2>
