--- a/duck.html
+++ b/duck.html
@@ -310,12 +310,12 @@
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
 		<p><b>You didnt get today's Crickdle. The answer is AKRAM.</b></p>
-		<p><b>Come back tomorrow to guess another cricketer.</b></p>
+		<p>Come back tomorrow to guess another cricketer.</p>
 				 <div class="share-container">
         <button class="share-button">SHARE</button>
 		  <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
 				</div>
-		<p><b>Next Crickdle in <span id="countdown"></span></b></p>
+		<p>Next Crickdle in <span id="countdown"></span></p>
 			</div>
 
 	<script>
