--- a/bowled.html
+++ b/bowled.html
@@ -252,6 +252,7 @@
   font-family: Arial, sans-serif;
   text-decoration: none;
   height: 40px;
+		line-height: 40px;
 }
 
 .twitter-button:hover {
