--- a/bowled.html
+++ b/bowled.html
@@ -252,7 +252,7 @@
   font-family: Arial, sans-serif;
   text-decoration: none;
   height: 40px;
-		line-height: 40px;
+		vertical-align: middle;
 }
 
 .twitter-button:hover {
