--- a/duck.html
+++ b/duck.html
@@ -232,7 +232,7 @@
   font-size: 16px;
   font-weight: bold;
   font-family: Arial, sans-serif;
-  margin-right: 20px;
+  margin-right: 10px;
   height: 40px;
 }
 
@@ -252,6 +252,7 @@
   font-family: Arial, sans-serif;
   text-decoration: none;
   height: 40px;
+		margin-left: 10px;
 }
 
 .twitter-button:hover {
