--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				font-size: 35px;
 				font-weight: bold;
 				color: #1dc278;
-				font-family: Arial, sans-serif;
+				font-family: Didot, serif;
 				line-height: 48px;
 				display: flex;
 				align-items: center;
@@ -365,7 +365,7 @@
 					<button class="toolbar-info" aria-label="About">
 						<img src="Info.png" alt="Information about Crickdle game">
 					</button>
-					<h1 class="toolbar-title">CRICKdle</h1>
+					<h1 class="toolbar-title">CRICKDLE</h1>
 					<button class="toolbar-help" aria-label="How to play">
 						<img src="Help.png" alt="How to play Crickdle game">
 					</button>
