--- a/index.html
+++ b/index.html
@@ -163,12 +163,17 @@
 				box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 				margin-bottom: 30px
 			}
+			
+			@font-face {
+  font-family: ClimateCrisis;
+  src: url(ClimateCrisis-Regular-VariableFont_YEAR.ttf);
+}
 
 			.toolbar-title {
 				font-size: 35px;
 				font-weight: bold;
 				color: #1dc278;
-				font-family: Arial, sans-serif;
+				font-family: ClimateCrisis, sans-serif;
 				line-height: 48px;
 				display: flex;
 				align-items: center;
