--- a/index.html
+++ b/index.html
@@ -171,9 +171,8 @@
 
 			.toolbar-title {
 				font-size: 35px;
-				font-weight: bold;
 				color: #1dc278;
-				font-family: ClimateCrisis, sans-serif;
+				font-family: ClimateCrisis;
 				line-height: 48px;
 				display: flex;
 				align-items: center;
