--- a/duck.html
+++ b/duck.html
@@ -70,11 +70,15 @@
 				margin-bottom: 30px
 			}
 
+			@font-face {
+  font-family: ClimateCrisis;
+  src: url(ClimateCrisis-Regular-VariableFont_YEAR.ttf);
+}
+
 			.toolbar-title {
 				font-size: 35px;
-				font-weight: bold;
 				color: #1dc278;
-				font-family: Arial, sans-serif;
+				font-family: ClimateCrisis;
 				line-height: 48px;
 				display: flex;
 				align-items: center;
