--- a/bowled.html
+++ b/bowled.html
@@ -275,7 +275,7 @@
 					<button class="toolbar-info" aria-label="About">
 						<img src="Info.png" alt="Information about Crickdle game">
 					</button>
-					<h1 class="toolbar-title">CRICKdle</h1>
+					<h1 class="toolbar-title">Crickdle</h1>
 					<button class="toolbar-help" aria-label="How to play">
 						<img src="Help.png" alt="How to play Crickdle game">
 					</button>
