--- a/duck.html
+++ b/duck.html
@@ -58,6 +58,7 @@
 			font-size: 1.5rem;
 			font-weight: bold;
                         color: #f03a17;
+			margin-bottom: 0rem;
 		}
 		.toolbar {
 				background-color: #f7f7f7;
