--- a/duck.html
+++ b/duck.html
@@ -261,7 +261,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p><b>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</b></p>
+						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
 					</div>
 				</div>
 			</div>
@@ -272,7 +272,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p><b>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</b></p>
+						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
 					</div>
 					</div>
 			</div>
