--- a/bowled.html
+++ b/bowled.html
@@ -242,6 +242,11 @@
 				width: 20px;
 				height: 20px;
 			}
+		
+		 img {
+        margin: 0.5rem 0; /* set margin above and below the image */
+        width: 10rem; /* set the width of the image to 10rem using rem units */
+      }
 	</style>
 </head>
 	<header>
@@ -280,6 +285,7 @@
 <body>
 	<div class="container">
 		<p class="text-large">Bowled 'em!</p>
+		<img src="bowled.png" alt="A ball ripping through a set of stumps">
 		<span class="dash" id="dash1">●</span>
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
