--- a/bowled.html
+++ b/bowled.html
@@ -244,7 +244,8 @@
 			}
 		
 		 img {
-        margin: 0.5rem 0; /* set margin above and below the image */
+        margin-top: 0.5rem;
+		margin-bottom: 0.2rem;
         width: 10rem; /* set the width of the image to 10rem using rem units */
       }
 	</style>
