--- a/bowled.html
+++ b/bowled.html
@@ -55,7 +55,7 @@
 			margin-bottom: 0.5rem;
 		}
 		.text-large {
-			font-size: 1.3rem;
+			font-size: 1.4rem;
 			font-weight: bold;
                         color: #1dc278;
 			margin-bottom: 0rem;
@@ -245,8 +245,8 @@
 		
 		 img {
         margin-top: 0.5rem;
-		margin-bottom: 0.2rem;
-        width: 10rem; /* set the width of the image to 10rem using rem units */
+		margin-bottom: 0.15rem;
+        width: 10rem;
       }
 	</style>
 </head>
