--- a/duck.html
+++ b/duck.html
@@ -55,9 +55,8 @@
 			margin-bottom: 0.5rem;
 		}
 		.text-large {
-			font-size: 1.3rem;
+			font-size: 1.4rem;
 			font-weight: bold;
-                        color: #f03a17;
 			margin-bottom: 0rem;
 		}
 		.toolbar {
@@ -242,6 +241,12 @@
 				width: 20px;
 				height: 20px;
 			}
+		
+			 img {
+        margin-top: 0.5rem;
+		margin-bottom: 0.15rem;
+        width: 10rem;
+      }
 	</style>
 </head>
 	<header>
@@ -280,6 +285,8 @@
 <body>
 		<div class="container">
 		<p class="text-large">Out for a duck!</p>
+			<img src="bowled.png" alt="A ball ripping through a set of stumps">
+		<br>
 		<span class="dash" id="dash1">●</span>
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
