--- a/duck.html
+++ b/duck.html
@@ -245,6 +245,7 @@
 			 img {
         margin-top: 0.5rem;
 		margin-bottom: 0.15rem;
+				  margin-top: 0.15rem;
         width: 10rem;
       }
 	</style>
