--- a/index.html
+++ b/index.html
@@ -406,19 +406,19 @@
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
-				<button id="submit1"><b>BOWL</b></button>
+				<button id="submit1"><b>&#8629;</b></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess2" disabled />
-				<button id="submit2" disabled><b>BOWL</b></button>
+				<button id="submit2" disabled><b>&#8629;</b></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess3" disabled />
-				<button id="submit3" disabled><b>BOWL</b></button>
+				<button id="submit3" disabled><b>&#8629;</b></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess4" disabled />
-				<button id="submit4" disabled><b>BOWL</b></button>
+				<button id="submit4" disabled><b>&#8629;</b></button>
 			</div>
       <div class="share-container">
         <button class="share-button">SHARE</button>
