--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				text-align: center;
 				border: 2px solid #ccc;
 				border-radius: 8px;
-				width: 60%;
+				width: 70%;
 				max-width: 200px;
 				transition: all 0.2s ease-in-out;
 				text-transform: uppercase;
@@ -142,7 +142,7 @@
 				color: #fff;
 				cursor: pointer;
 				transition: all 0.2s ease-in-out;
-				width: 40%;
+				width: 30%;
 				max-width: 150px;
 				font-family: Arial, sans-serif;
 			}
@@ -406,19 +406,19 @@
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
-				<button id="submit1"><b>&#8629;</b></button>
+				<button id="submit1"><b>&rarr;</b></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess2" disabled />
-				<button id="submit2" disabled><b>&#8629;</b></button>
+				<button id="submit2" disabled><b>&rarr;</b></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess3" disabled />
-				<button id="submit3" disabled><b>&#8629;</b></button>
+				<button id="submit3" disabled><b>&rarr;</b></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess4" disabled />
-				<button id="submit4" disabled><b>&#8629;</b></button>
+				<button id="submit4" disabled><b>&rarr;</b></button>
 			</div>
       <div class="share-container">
         <button class="share-button">SHARE</button>
