--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 			.guess-input button {
 				padding: 0.5rem 1rem;
 				font-size: 1.5rem;
+				font-weight: bold;
 				border: none;
 				border-radius: 8px;
 				background-color: #1dc278;
