--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
 }
 
 .share-button {
-  background-color: #1dc278;
-  color: white;
+  color: #1dc278;
+  background-color: white;
   border: none;
   padding: 8px 16px;
   border-radius: 4px;
@@ -340,8 +340,8 @@
 }
 
 .twitter-button {
-  background-color: #1dc278;
-  color: white;
+  color: #1dc278;
+  background-color: white;
   border: none;
   padding: 8px 16px;
   border-radius: 4px;
