--- a/duck.html
+++ b/duck.html
@@ -219,8 +219,8 @@
 			}
 		
 .share-button {
-  background-color: #1dc278;
-  color: white;
+  color: #1dc278;
+  background-color: white;
   border: none;
   padding: 8px 16px;
   border-radius: 4px;
