--- a/bowled.html
+++ b/bowled.html
@@ -220,8 +220,8 @@
 			}
 		
 .share-button {
-  background-color: #1dc278;
-  color: white;
+  color: #1dc278;
+  background-color: white;
   border: none;
   padding: 8px 16px;
   border-radius: 4px;
