--- a/index.html
+++ b/index.html
@@ -362,6 +362,16 @@
 				width: 20px;
 				height: 20px;
 			}
+      
+      	.details-container {
+  margin: 0 auto;
+				padding: 1.5rem;
+				border-radius: 0.5rem;
+				background-color: #f5f5f5;
+				box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+				width: 90%;
+				max-width: 600px;
+}
 		</style>
 	</head>
 	<body>
@@ -398,11 +408,13 @@
 				</div>
 			</div>
 		</header>
+      <div class="details-container">
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
 			<p><span id="date"></span></p>
 			<p><span id="score"></span></p>
 		</div>
+    </div>
 		<div id="guess-section">
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
