--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 				font-size: 1.1rem;
 				font-weight: 500;
 				font-family: Arial, sans-serif;
+        font-color: white;
 			}
 
 			#guess-section {
@@ -364,12 +365,13 @@
 			}
       
       	.details-container {
-  margin: 0 auto;
 				border-radius: 0.5rem;
 				background-color: #f5f5f5;
 				width: 90%;
 				max-width: 600px;
-        margin-bottom: 2rem;
+        margin-bottom: 1.5rem;
+        padding-top: 0.1rem;
+        padding-bottom: 0.1rem;
 }
 		</style>
 	</head>
