--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
 			}
       
       	.details-container {
+          margin: 0 auto;
 				border-radius: 0.5rem;
 				background-color: #f5f5f5;
 				width: 90%;
