--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				font-size: 1.1rem;
 				font-weight: 500;
 				font-family: Arial, sans-serif;
-        color: white;
+        color: #1dc278;
 			}
 
 			#guess-section {
@@ -372,6 +372,7 @@
 				max-width: 600px;
         margin-bottom: 1.5rem;
         padding-top: 0.1rem;
+        padding-bottom: 0.05rem;
 }
 		</style>
 	</head>
