--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				font-size: 1.1rem;
 				font-weight: 500;
 				font-family: Arial, sans-serif;
-        color: #1dc278;
+        color: white;
 			}
 
 			#guess-section {
@@ -367,12 +367,12 @@
       	.details-container {
           margin: 0 auto;
 				border-radius: 0.5rem;
-				background-color: #f5f5f5;
+				background-color: #cccccc;
 				width: 90%;
 				max-width: 600px;
         margin-bottom: 1.5rem;
         padding-top: 0.1rem;
-        padding-bottom: 0.05rem;
+        padding-bottom: 4px;
 }
 		</style>
 	</head>
