--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 				padding: 1.5rem;
 				border-radius: 0.5rem;
 				background-color: #f5f5f5;
-				box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 				width: 90%;
 				max-width: 600px;
 			}
@@ -87,7 +86,7 @@
 				font-size: 1.1rem;
 				font-weight: 500;
 				font-family: Arial, sans-serif;
-        color: white;
+        color: black;
 			}
 
 			#guess-section {
@@ -367,7 +366,7 @@
       	.details-container {
           margin: 0 auto;
 				border-radius: 0.5rem;
-				background-color: #cccccc;
+				background-color: #f5f5f5;
 				width: 90%;
 				max-width: 600px;
         margin-bottom: 1.5rem;
@@ -417,6 +416,7 @@
 			<p><span id="score"></span></p>
 		</div>
     </div>
+	      <div class="details-container">
 		<div id="guess-section">
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
@@ -434,6 +434,7 @@
 			<div class="guess-input">
 				<input type="text" id="guess4" disabled />
 				<button id="submit4" disabled><b>&rArr;</b></button>
+			</div>
 			</div>
       <div class="share-container">
         <button class="share-button">SHARE</button>
