--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				border-radius: 0.5rem;
 				width: 90%;
 				max-width: 600px;
-        background-color: white;
+        background-color: #ffffff;
 			}
 
 			#match-details {
