--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 			<p><span id="score"></span></p>
 		</div>
     </div>
-	      <div class="details-container">
+	      <div class="game-container">
 		<div id="guess-section">
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
