--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
 				<button id="submit4" disabled><b>&rArr;</b></button>
 			</div>
 			</div>
+      </div>
       <div class="share-container">
         <button class="share-button">SHARE</button>
         <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
