--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 				border-radius: 0.5rem;
 				width: 90%;
 				max-width: 600px;
-        background-color: #ffffff;
 			}
 
 			#match-details {
@@ -371,7 +370,7 @@
 		max-width: 600px;
 		margin-bottom: 1.5rem;
 		padding-top: 0.1rem;
-		padding-bottom: 4px;
+    text-align: center
 }
 		</style>
 	</head>
@@ -436,7 +435,6 @@
 				<button id="submit4" disabled><b>&rArr;</b></button>
 			</div>
 			</div>
-      </div>
       <div class="share-container">
         <button class="share-button">SHARE</button>
         <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
