--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 			#guess-section {
 				text-align: center;
 				margin-bottom: 1rem;
+        width: 90%;
+        max-width: 600px;
 			}
 
 			#guess-section h2 {
@@ -369,7 +371,7 @@
 		width: 90%;
 		max-width: 600px;
 		margin-bottom: 1.5rem;
-		padding-top: 0.1rem;
+    width: 8rem;
     text-align: center
 }
 		</style>
@@ -415,7 +417,6 @@
 			<p><span id="score"></span></p>
 		</div>
     </div>
-	      <div class="game-container">
 		<div id="guess-section">
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
@@ -434,7 +435,7 @@
 				<input type="text" id="guess4" disabled />
 				<button id="submit4" disabled><b>&rArr;</b></button>
 			</div>
-			</div>
+      </div>
       <div class="share-container">
         <button class="share-button">SHARE</button>
         <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
