--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 				border-radius: 0.5rem;
 				width: 90%;
 				max-width: 600px;
+        margin: 0 auto;
 			}
 
 			#match-details {
@@ -371,7 +372,6 @@
 		width: 90%;
 		max-width: 600px;
 		margin-bottom: 1.5rem;
-    width: 8rem;
     text-align: center
 }
 		</style>
