--- a/index.html
+++ b/index.html
@@ -373,6 +373,12 @@
 		max-width: 600px;
 		margin-bottom: 1.5rem;
     text-align: center
+    
+    	.game-container {
+		margin: 0 auto;
+		width: 90%;
+		max-width: 600px;
+    text-align: center
 }
 		</style>
 	</head>
@@ -418,6 +424,7 @@
 		</div>
     </div>
 		<div id="guess-section">
+        <div class="details-container">
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
@@ -439,6 +446,7 @@
       <div class="share-container">
         <button class="share-button">SHARE</button>
         <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
+      </div>
       </div>
 		</div>
 		<script>
