--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
     	.game-container {
 		margin: 0 auto;
 		width: 90%;
+    background-color: #ffffff;
 		max-width: 600px;
+    border-radius: 0.5rem;
     text-align: center
 }
 		</style>
@@ -424,7 +426,7 @@
 		</div>
     </div>
 		<div id="guess-section">
-        <div class="details-container">
+        <div class="game-container">
 			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
