--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 				margin-bottom: 1rem;
         width: 90%;
         max-width: 600px;
+        margin: auto;
 			}
 
 			#guess-section h2 {
@@ -375,7 +376,7 @@
     text-align: center
     
     	.game-container {
-		margin: 0 auto;
+		margin: auto;
 		width: 90%;
     background-color: #ffffff;
 		max-width: 600px;
