--- a/duck.html
+++ b/duck.html
@@ -247,6 +247,15 @@
 		margin-top: 0.5rem;
         width: 10rem;
       }
+						
+							.game-container {
+		margin: auto;
+		width: 90%;
+    background-color: #ffffff;
+		max-width: 600px;
+    border-radius: 0.5rem;
+    text-align: center
+}
 	</style>
 </head>
 	<header>
