--- a/bowled.html
+++ b/bowled.html
@@ -294,6 +294,7 @@
 		</header>
 <body>
 	<div class="container">
+		  <div class="game-container">
 		<p class="text-large">Bowled 'em!</p>
 		<img src="bowled.png" alt="A ball ripping through a set of stumps">
 		<br>
@@ -301,6 +302,7 @@
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
+		</div>
 		<p><b>You got today's Crickdle.</b></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
         <button class="share-button">SHARE</button>
