--- a/duck.html
+++ b/duck.html
@@ -293,6 +293,7 @@
 		</header>
 <body>
 		<div class="container">
+			  <div class="game-container">
 		<p class="text-large">Out for a duck!</p>
 			<img src="bowled.png" alt="A ball ripping through a set of stumps">
 		<br>
@@ -300,6 +301,7 @@
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
+		</div>
 		<p><b>You didnt get today's Crickdle. The answer is AKRAM.</b></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
         <button class="share-button">SHARE</button>
