--- a/bowled.html
+++ b/bowled.html
@@ -252,7 +252,7 @@
 							.game-container {
 		margin: auto;
 		width: 90%;
-    background-color: #ffffff;
+    background-color: #f5f5f5;
 		max-width: 600px;
     border-radius: 0.5rem;
     text-align: center
