--- a/duck.html
+++ b/duck.html
@@ -254,7 +254,7 @@
     background-color: #f5f5f5;
 		max-width: 600px;
     border-radius: 0.5rem;
-    text-align: center
+    text-align: center;
 }
 	</style>
 </head>
