--- a/index.html
+++ b/index.html
@@ -445,14 +445,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Sri Lanka",
-				nation2: "Pakistan",
-				date: "Jun 14-17, 2000",
-				score: "Sri Lanka 273 & 123, Pakistan (T: 131) 266 & 131/5; Pakistan won by 5 wickets",
-				crickdlequestion: "Pakistan player scored 78 & 20* and took 1/55 & 5/45 in this match?"
+				nation1: "New Zealand",
+				nation2: "Sri Lanka",
+				date: "Dec 18-21, 2015",
+				score: "Sri Lanka 292 & 133, New Zealand (T: 189) 237 & 189/5; New Zealand won by 5 wickets",
+				crickdlequestion: "New Zealand player scored 108* in this match?"
 			};
 
-			const correctPlayer = ["AKRAM"];
+			const correctPlayer = ["WILLIAMSON"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
