--- a/bowled.html
+++ b/bowled.html
@@ -248,6 +248,7 @@
     border-radius: 0.5rem;
     text-align: center;
 				padding-top: 0.1rem;
+				padding-bottom: 0.1rem;
 }
 	</style>
 </head>
