--- a/index.html
+++ b/index.html
@@ -364,7 +364,9 @@
 		width: 90%;
 		max-width: 600px;
 		margin-bottom: 1.5rem;
-    text-align: center
+    text-align: center;
+    padding: 5px;
+    }
     
     	.game-container {
 		margin: auto;
@@ -372,7 +374,7 @@
     background-color: #ffffff;
 		max-width: 600px;
     border-radius: 0.5rem;
-    text-align: center
+    text-align: center;
 }
 		</style>
 	</head>
