--- a/index.html
+++ b/index.html
@@ -70,9 +70,14 @@
 				text-align: center;
 				margin-bottom: 25px;
 				font-family: Arial, sans-serif;
+        width: 90%;
+		max-width: 600px;
+    border-radius: 0.5rem;
+    margin: auto;
 			}
-
+		
 			#match-details p {
+        margin: 0.2rem 0;
 				font-size: 1.1rem;
 				font-weight: 500;
 				font-family: Arial, sans-serif;
@@ -366,15 +371,6 @@
     text-align: center;
     padding: 5px;
     }
-    
-    	.game-container {
-		margin: auto;
-		width: 90%;
-    background-color: #ffffff;
-		max-width: 600px;
-    border-radius: 0.5rem;
-    text-align: center;
-}
 		</style>
 	</head>
 	<body>
@@ -411,12 +407,10 @@
 				</div>
 			</div>
 		</header>
-      <div class="details-container">
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
 			<p><span id="date"></span></p>
 			<p><span id="score"></span></p>
-		</div>
     </div>
 		<div id="guess-section">
         <div class="game-container">
