--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		max-width: 600px;
     border-radius: 0.5rem;
     margin: auto;
+    background-color: #f7f7f7;
 			}
 		
 			#match-details p {
