--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     border-radius: 0.5rem;
     margin: auto;
     background-color: #f7f7f7;
+    margin-bottom: 2rem;
+    padding: 10px;
 			}
 		
 			#match-details p {
