--- a/duck.html
+++ b/duck.html
@@ -295,7 +295,7 @@
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
 		</div>
-		<p><b>You didnt get today's Crickdle. The answer is WILLIAMSON.</b></p>
+		<p><b>You didn't get today's Crickdle. The answer is WILLIAMSON.</b></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
         <button class="share-button">SHARE</button>
 		<p>Next Crickdle in <span id="countdown"></span></p>
