--- a/duck.html
+++ b/duck.html
@@ -248,6 +248,7 @@
     text-align: center;
 				padding-top: 0.1rem;
 				padding-bottom: 0.4rem;
+				margin-bottom: 1.5rem
 }
 	</style>
 </head>
