--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
   <meta name="author" content="Ayush Sanghavi">
 		<style>
+    @font-face {
+  font-family: InterTight;
+  src: url(InterTight-VariableFont_wght.ttf);
+}
+    
 			html {
 				box-sizing: border-box;
 				font-size: 16px;
@@ -39,7 +44,7 @@
 			}
 
 			body {
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 				font-weight: 400;
 				font-size: 1rem;
 				line-height: 1.5;
@@ -47,7 +52,7 @@
 			}
 
 			h1, h2, h3, h4, h5, h6 {
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 				font-weight: 700;
 				line-height: 1.2;
 				margin-top: 0;
@@ -69,7 +74,7 @@
 			#match-details {
 				text-align: center;
 				margin-bottom: 25px;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
         width: 90%;
 		max-width: 600px;
     border-radius: 0.5rem;
