--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         margin: 0.2rem 0;
 				font-size: 1.1rem;
 				font-weight: 500;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
         color: black;
 			}
 
@@ -103,7 +103,7 @@
 			#guess-section h2 {
 				margin-bottom: 0.5rem;
 				font-size: 1.1rem;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.guess-input {
@@ -116,7 +116,7 @@
 			.guess-input label {
 				margin-right: 0.5rem;
 				font-size: 1.2rem;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.guess-input input {
@@ -130,7 +130,7 @@
 				max-width: 250px;
 				transition: all 0.2s ease-in-out;
 				text-transform: uppercase;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.guess-input input:focus {
@@ -151,7 +151,7 @@
 				transition: all 0.2s ease-in-out;
 				width: 30%;
 				max-width: 100px;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.guess-input button:disabled {
@@ -232,14 +232,14 @@
 				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup-header h2 {
 				margin: 0;
 				font-size: 20px;
 				color: #1dc278;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup-close {
@@ -248,14 +248,14 @@
 				font-size: 24px;
 				cursor: pointer;
 				color: #f03a17;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup-content {
 				margin: 0;
 				font-size: 18px;
 				line-height: 1.5;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 			
 			.toolbar-info {
@@ -293,14 +293,14 @@
 				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup2-header h2 {
 				margin: 0;
 				font-size: 20px;
 				color: #1dc278;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup2-close {
@@ -309,14 +309,14 @@
 				font-size: 24px;
 				cursor: pointer;
 				color: #f03a17;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup2-content {
 				margin: 0;
 				font-size: 18px;
 				line-height: 1.5;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 			
 			.share-container {
@@ -336,7 +336,7 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
-  font-family: Arial, sans-serif;
+  font-family: InterTight, sans-serif;
   margin-right: 20px;
   height: 40px;
 }
@@ -354,7 +354,7 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
-  font-family: Arial, sans-serif;
+  font-family: InterTight, sans-serif;
   text-decoration: none;
   height: 40px;
 }
